fix animations on ios devices with prefixes

--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,19 @@ body {
 }
 
 .App {
-    filter: grayscale(0);
+    -webkit-filter: grayscale(0);
+            filter: grayscale(0);
     text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     min-height: 100vh;
-    animation: come-up-and-fade-in 0.5s linear forwards;
+    -webkit-animation: come-up-and-fade-in 0.5s linear forwards;
+            animation: come-up-and-fade-in 0.5s linear forwards;
     padding: 10px;    
 }
 
@@ -18,13 +25,32 @@ body {
     font-family: 'Space Mono', monospace;
 }
 
-@keyframes come-up-and-fade-in {
+@-webkit-keyframes come-up-and-fade-in {
     0% {
-        filter: grayscale(200);
-        transform: translateY(50px);
+        -webkit-filter: grayscale(200);
+                filter: grayscale(200);
+        -webkit-transform: translateY(50px);
+                transform: translateY(50px);
     }
     100% {
-        filter: grayscale(0);
-        transform: translateY(0px);
+        -webkit-filter: grayscale(0);
+                filter: grayscale(0);
+        -webkit-transform: translateY(0px);
+                transform: translateY(0px);
+    }
+}
+
+@keyframes come-up-and-fade-in {
+    0% {
+        -webkit-filter: grayscale(200);
+                filter: grayscale(200);
+        -webkit-transform: translateY(50px);
+                transform: translateY(50px);
+    }
+    100% {
+        -webkit-filter: grayscale(0);
+                filter: grayscale(0);
+        -webkit-transform: translateY(0px);
+                transform: translateY(0px);
     }
 }
