--- a/src/LeftThisDay.css
+++ b/src/LeftThisDay.css
@@ -2,15 +2,31 @@
     background-color: #ff7c7c;
     min-height: 65vh;
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: left;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-radius: 10px;
     margin-bottom: 5px;
     margin-top: 5px;
-    animation: animate-red-background 9s linear infinite;
+    -webkit-animation: animate-red-background 9s linear infinite;
+            animation: animate-red-background 9s linear infinite;
+}
+
+@-webkit-keyframes animate-red-background{
+    50%{
+        background-color: #ff5454;
+    }
 }
 
 @keyframes animate-red-background{
@@ -21,7 +37,8 @@
 
 .left-this-day-container h2 {
     font-size: 40px;
-    flex-basis: 30%;
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
 }
 
 .left-this-day-container h3 {
@@ -29,9 +46,14 @@
 }
 
 .left-this-day-container div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     text-align: center;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 @media(max-width:1024px) {
@@ -45,11 +67,17 @@
 
 @media(max-width:640px) {
     .left-this-day-container {
-        flex-direction: column;
-        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .left-this-day-container h2 {
-        flex-basis: 50%;
+        -ms-flex-preferred-size: 50%;
+            flex-basis: 50%;
         font-size: 22px;
     }
     .left-this-day-container h3 {
