--- a/src/LeftThisYear.css
+++ b/src/LeftThisYear.css
@@ -2,12 +2,22 @@
     background-color: #57ff95;
     min-height: 80vh;
     color: #ffffff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     text-align: left;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-radius: 10px;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -15,14 +25,20 @@
 
 
 .left-this-year-container h2,h3 {
-    flex-basis: 35%;
+    -ms-flex-preferred-size: 35%;
+        flex-basis: 35%;
     font-size: 26px;
 }
 
 @media(max-width: 1024px) {
     .left-this-year-container {
-        justify-content: center;
-        flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     .left-this-year-container h2,h3{
         font-size: 22px;
@@ -31,8 +47,13 @@
 
 @media(max-width: 640px) {
     .left-this-year-container {
-        flex-direction: column;
-        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .left-this-year-container h2,h3{
         font-size: 18px;
