--- a/src/ThisInstance.css
+++ b/src/ThisInstance.css
@@ -2,13 +2,26 @@
     background-color: #d5fafd;
     min-height: 50vh;
     color: #585858;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     border-radius: 10px;
     margin-bottom: 5px;
     margin-top: 5px;
-    animation: animate-instance-background 10s linear infinite;
+    -webkit-animation: animate-instance-background 10s linear infinite;
+            animation: animate-instance-background 10s linear infinite;
+}
+
+@-webkit-keyframes animate-instance-background{
+    50%{
+        background-color: #baf9ff; 
+    }
 }
 
 @keyframes animate-instance-background{
@@ -18,30 +31,56 @@
 }
 
 .this-instance-container h1 {
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
     font-size: 90px;
-    animation: 3s pulse linear infinite;
+    -webkit-animation: 3s pulse linear infinite;
+            animation: 3s pulse linear infinite;
 }
 
 .this-instance-container h2 {
-    flex-basis: 50%;
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
     font-size: 40px;
 }
 
 /* ANIMATIONS */
 
-@keyframes pulse {
+@-webkit-keyframes pulse {
     0% {
-        transform: scale(1);
+        -webkit-transform: scale(1);
+                transform: scale(1);
     }
     2% {
-        transform: scale(1.01);
+        -webkit-transform: scale(1.01);
+                transform: scale(1.01);
     }
     50% {
-        transform: scale(1);
+        -webkit-transform: scale(1);
+                transform: scale(1);
     }
     52% {
-        transform: scale(1.01);
+        -webkit-transform: scale(1.01);
+                transform: scale(1.01);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        -webkit-transform: scale(1);
+                transform: scale(1);
+    }
+    2% {
+        -webkit-transform: scale(1.01);
+                transform: scale(1.01);
+    }
+    50% {
+        -webkit-transform: scale(1);
+                transform: scale(1);
+    }
+    52% {
+        -webkit-transform: scale(1.01);
+                transform: scale(1.01);
     }
 }
 
