--- a/src/YearStats.css
+++ b/src/YearStats.css
@@ -2,10 +2,16 @@
     background-color: #8ce9ae;
     min-height: 65vh;
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: left;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-radius: 10px;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -13,7 +19,8 @@
 
 .year-stats-container h2 {
     font-size: 40px;
-    flex-basis: 30%;
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
 }
 
 .year-stats-container h3 {
@@ -27,9 +34,14 @@
 } */
 
 .year-stats-container div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     text-align: center;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 @media(max-width:1024px) {
@@ -43,11 +55,17 @@
 
 @media(max-width:640px) {
     .year-stats-container {
-        flex-direction: column;
-        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .year-stats-container h2 {
-        flex-basis: 50%;
+        -ms-flex-preferred-size: 50%;
+            flex-basis: 50%;
         font-size: 22px;
     }
     .year-stats-container h3 {
